# chat-bot

./: .gitignore  Dockerfile  README.md
01_basics_n_setup/: docker-compose.yaml  ingest_data.py
01_basics_n_setup/terraform/: main.tf  variables.tf
01_basics_n_setup/terraform/.terraform/: terraform.tfstate
02_workflow_orchestration/: Dockerfile  README.md  pyproject.toml
02_workflow_orchestration/flows/01_start/: ingest_data_flow.py
02_workflow_orchestration/flows/02_gcp/: etl_gcs_to_bq.py  etl_web_to_gcs.py
02_workflow_orchestration/flows/03_deployments/: etl_parent_flow-deployment.yaml  parameterized_flow.py
03_data_warehouse/: etl_gcs_to_bq.py  pyproject.toml
data_engineer_path/: .dockerignore  Dockerfile  Dockerfile2  LICENSE  Makefile  README.md  docker-compose.yaml  ingest_data.py  pyproject.toml  requirements.txt  settings.sh  setup.py
data_engineer_path/docs/: Makefile  conf.py  index.rst  make.bat
data_engineer_path/flows/: pyproject.toml
data_engineer_path/flows/02_gcp/: etl_gcs_to_bq.py  etl_web_to_gcs.py
data_engineer_path/flows/03_deployments/: docker_deploy.py  etl_parent_flow-deployment.yaml  parameterized_flow.py
data_engineer_path/notebooks/: con_psql.ipynb  week_1.ipynb
data_engineer_path/terraform/: terraform.tfstate  terraform.tfstate.backup
