[tool.poetry]
name = "03_data_warehouse"
version = "0.1.0"
description = "week 03 of the data engineering path"
authors = ["vfamim <vfamim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "1.5.2"
sqlalchemy = "1.4.46"
psycopg2 = "^2.9.7"
psycopg2-binary = "2.9.5"
prefect = "2.7.7"
prefect-sqlalchemy = "0.2.2"
prefect-gcp = {version = "0.2.4", extras = ["cloud-storage"]}
protobuf = "4.21.11"
pyarrow = "10.0.1"
pandas-gbq = "0.18.1"
python-decouple = "^3.8"
pydantic = "1.10.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
