[tool.poetry]
name = "dockerfile for deployment"
version = "0.1.0"
description = ""
authors = ["vfamim <vfamim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "1.5.2"
prefect-gcp = {version = "0.2.4", extras = ["cloud-storage"]}
protobuf = "4.21.11"
pyarrow = "10.0.1"
pydantic = "1.10.11"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
